--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -236,23 +236,18 @@
     font-size: 14px
     line-height: 21px
     margin-top: 11px
-
   .subheader
     height: 60px
     top: 30px
-
     &_text
       display: none
-
     &_logo
       margin-top: 16px
-
     &_phone
       font-size: 12px
       font-weight: 400
       text-transform: uppercase
       margin-top: 11px
-
     &_btn
       width: 110px
       height: 22px
@@ -262,28 +257,30 @@
   .promo
     min-height: 400px
     padding: 93px 0 35px 0
-
     &_text
       display: none
-
     &_header
       font-size: 30px
       padding: 0 24px
       line-height: 35px
-
     &_subheader
       font-size: 20px
       margin-top: 33px
       padding: 0 10px
       line-height: 30px
-
     &_btn
       width: 210px
       height: 50px
       margin-top: 72px
       font-size: 16px
+
   .menu
     width: 80%
+    &_item
+      width: 100%
+      text-align: center
+    &_link
+      display: block
   .reasons
     padding: 22px 0 36px 0
 
